<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:stretchColumns="*">
    <TableRow
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <EditText
            android:layout_height="fill_parent"
            android:inputType="number|numberDecimal"
            android:id="@+id/inDistance"
            android:enabled="true"
            android:text="@string/distance_default"
            android:hint="@string/distance_hint"
            android:imeOptions="actionDone"
            android:layout_span="3" />
        <TextView
            android:layout_height="fill_parent"
            android:text="@string/meters"
            android:id="@+id/lblMeters"
            android:textStyle="bold"
            android:layout_span="1"
            android:gravity="center|left" />
        <TextView
            android:layout_height="fill_parent"
            android:id="@+id/emptySpace"
            android:layout_span="2" />
        <EditText
            android:layout_height="fill_parent"
            android:id="@+id/inIntervalLength"
            android:gravity="center_horizontal"
            android:enabled="true"
            android:text="@string/distance_default"
            android:hint="@string/interval_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:layout_span="3" />
        <TextView
            android:layout_height="fill_parent"
            android:text="@string/seconds"
            android:id="@+id/lblSeconds"
            android:textStyle="bold"
            android:layout_span="1"
            android:gravity="center|left" />
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <SeekBar
            android:layout_height="fill_parent"
            android:id="@+id/scanLengthBar"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:max="1900"
            android:progress="1000"
            android:layout_span="9" />
        <TextView
            android:layout_height="fill_parent"
            android:id="@+id/lblMillis"
            android:text="1000ms"
            android:textStyle="bold"
            android:layout_span="1"
            android:gravity="center_horizontal|fill_vertical" />
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button
            android:layout_height="fill_parent"
            android:text="@string/start"
            android:id="@+id/btnStart"
            android:enabled="false"
            style="@style/AppTheme"
            android:layout_span="10" />
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <ListView
            android:layout_height="fill_parent"
            android:id="@+id/listBeacons"
            android:layout_span="10" />
    </TableRow>
</TableLayout>